--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,6 +44,6 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: liviatanaka/partida-02-ci:latest
+        tags: liviatanaka/partida-02-ci:${{ github.sha }}
 
     
