--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,4 +46,16 @@ jobs:
         push: true
         tags: liviatanaka/partida-02-ci:${{ github.sha }}
 
+
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST_TEST }}
+        username: "ec2-user"
+        key: ${{ secrets.KEY_TEST }}
+        port: 22
+        script: |
+          docker stop partida-02-ci
+          docker rm --force partida-05-ci
+          docker run -d -p 8080:8080 --name partida-02-ci liviatanaka/partida-02-ci:${{ github.sha }}
     
