--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,4 +43,11 @@ jobs:
           ${{ github.workspace }}/**/target/test-results/jacoco/jacoco.xml
         token: ${{ secrets.GITHUB_TOKEN }}
         min-coverage-overall: 20
-        min-coverage-changed-files: 60
+        min-coverage-changed-files: 20
+        
+    - name: Fail PR if overall coverage is less than 20%
+      if: ${{ steps.jacoco.outputs.coverage-overall < 20.0 }}
+      uses: actions/github-script@v6
+      with:
+        script: |
+          core.setFailed('Overall coverage is less than 20%!')
